add electric clojure

--- a/.gitignore
+++ b/.gitignore
@@ -61,4 +61,9 @@ projects/**/pom.xml
 .clj-kondo/.cache
 
 # Calva VS Code Extension
-.calva/output-window/output.calva-repl
+**/.calva/output-window/output.calva-repl
+
+
+# generated
+**/.shadow-cljs
+**/js/cljs-runtime
