--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@ dist
 dist-ssr
 *.local
 
+# pixi environments
+.pixi
+*.egg-info
+
 # Editor directories and files
 **/.vscode/*
 !.vscode/extensions.json
@@ -70,3 +74,4 @@ projects/**/pom.xml
 
 # secrets
 **/config.secrets.edn
+**/.env.secret
