refactor, add openrouter client

--- a/clojure-stuff/components/openai-client/resources/openai-client/config.secrets.edn.sample
+++ b/clojure-stuff/components/openai-client/resources/openai-client/config.secrets.edn.sample
@@ -1,1 +1,3 @@
-{:akash-apikey "your akash apikey"}
+{:akash-apikey "your akash apikey"
+ :deepseek-apikey "your deepseek apikey"
+ :openrouter-apikey "your openrouter apikey"}
