--- a/clojure-stuff/package.json
+++ b/clojure-stuff/package.json
@@ -10,6 +10,7 @@
     "@tauri-apps/cli": "^2"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.30.8",
     "@tailwindcss/cli": "^4.1.4",
     "tailwindcss": "^4.1.4"
   }
