--- a/clojure-stuff/package.json
+++ b/clojure-stuff/package.json
@@ -10,8 +10,17 @@
     "@tauri-apps/cli": "^2"
   },
   "dependencies": {
+    "@editorjs/checklist": "^1.6.0",
     "@editorjs/editorjs": "^2.30.8",
+    "@editorjs/embed": "^2.7.6",
+    "@editorjs/header": "^2.8.8",
+    "@editorjs/image": "^2.10.2",
+    "@editorjs/link": "^2.6.2",
+    "@editorjs/list": "^2.0.6",
+    "@editorjs/quote": "^2.7.6",
+    "@editorjs/raw": "^2.5.1",
     "@tailwindcss/cli": "^4.1.4",
+    "@tailwindcss/typography": "^0.5.16",
     "tailwindcss": "^4.1.4"
   }
 }
